# barcode_reader

./: README.md  barcode_reader.py  main.py  pyproject.toml
